--- a/FFMPEG command .ipynb
+++ b/FFMPEG command .ipynb
@@ -26,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,7 +37,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,7 +49,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,7 +58,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +66,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,7 +106,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,13 +127,28 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3.1 GOP type check\n",
     "\n",
-    "  ffprobe -v error-show_frames (output) | findstr“pict_type”  == >验证GOP type"
+    "  ffprobe -v error -show_frames (output) | findstr“pict_type”  == >验证GOP type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 General check method\n",
+    "\n",
+    "use  \n",
+    "|findstr“*keywords”   keywords ==> in the list \n",
+    "\n",
+    "ffprobe -v error -show_packets  \n",
+    "                 -show_data  \n",
+    "                 -show_format  \n",
+    "                 -show_frames  \n",
+    "                 -show_streams  \n"
    ]
   }
  ],
